feat: WIP - 项目初始化20260110.2 - 代码优化 基本功能实现